--- a/Handwritten-Numbers-Classification.ipynb
+++ b/Handwritten-Numbers-Classification.ipynb
@@ -44,7 +44,7 @@
     "    test_imagedata = mnist_test_images.reshape(mnist_test_images.shape[0], 1, 28, 28)\n",
     "    input_shape = (1, 28, 28)\n",
     "else:\n",
-    "    train_imagedata = mnist_train_images.reshape(mnist_train_images.shape[0], 28, 28, 1) # 1 is single colour channel\n",
+    "    train_imagedata = mnist_train_images.reshape(mnist_train_images.shape[0], 28, 28, 1)\n",
     "    test_imagedata = mnist_test_images.reshape(mnist_test_images.shape[0], 28, 28, 1)\n",
     "    input_shape = (28, 28, 1)\n",
     "    \n",
